--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   syncfusion_flutter_charts: ^20.4.53
   provider: ^6.0.5
+  http: ^0.13.5
+  freezed: ^2.3.2
+  build_runner: ^2.3.3
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +55,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,7 +71,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #   - images/a_dot_ham.jpeg
+    - assets/avatars/female.jpg
+    - assets/icons/user.svg
+    - assets/icons/user_tapped.svg
+    - assets/avatars/male.png
+    - assets/icons/arrow_right.svg
+    - assets/icons/next.svg
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -79,6 +90,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  #  fonts:
+  #  - family: icomoon
+  #    fonts:
+  #      - asset: assets/fonts/icomoon.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
