--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   freezed: ^2.3.2
   build_runner: ^2.3.3
   json_annotation: ^4.8.0
+  flutter_secure_storage: ^8.0.0
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
